--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 
 body{
     font-family: tiff, sans-serif;
-    background: url(/background_image.jpg);
+    background: url(background_image.jpg);
     background-size: cover;
     margin: 0;
     padding: 0;
