--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: tiff;
-    src: url(/Inter-VariableFont_slnt\,wght.ttf);
+    src: url(Inter-VariableFont_slnt\,wght.ttf);
 }
 
 body{
